Testing speed at which render updates wbesites

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
             <canvas id="dragon-display"></canvas>
         </div>
+        <img src="/islamic-courses.svg"/>
         
     </body>
 </html>
